--- a/core/templates/produto.html
+++ b/core/templates/produto.html
@@ -1,10 +1,24 @@
+{% load bootstrap4 %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <title>Produto</title>
+     {% bootstrap_css %}
 </head>
 <body>
-    <h1>Produto</h1>
+    <div class="container">
+        <h1>Produto</h1>
+        {% bootstrap_messages %}
+        <form action="{% url 'produto' %}" method="POST" class="form" autocomplete="off" enctype="multipart/form-data" >
+            {%csrf_token%}
+            {% bootstrap_form form %}
+            {% buttons %}
+                <button type="submit" class="btn-primary">Cadastrar</button>
+            {% endbuttons %}
+        </form>
+    </div>
+
+{% bootstrap_javascript jquery='full' %}
 </body>
 </html>
